[package]
name = "cw-minter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = "1.2"
cw-storage-plus = "1.0"
cw-asset = "2.4"
cw-ownable = "0.5"
cw721 = "0.17"
cosmwasm-schema = "2.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1"

[dev-dependencies]
cw-multi-test = "0.16"
